Closed
Bug 352448
Opened 19 years ago
Closed 19 years ago
"Feed Preferences..." menu item does not activate General prefs pane
Categories
(Camino Graveyard :: Preferences, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino1.5
People
(Reporter: bugzilla-graveyard, Assigned: murph)
Details
(Keywords: fixed1.8.1)
Attachments
(1 file)
|
1.08 KB,
patch
|
nick.kreeger
:
review+
mikepinkerton
:
superreview+
|
Details | Diff | Splinter Review |
Summary pretty much says it all. This menu item should activate the General prefs pane, since that's where the only RSS-related pref lives.
This works fine on first launch, so to reproduce, you need to have previously opened prefs and selected something besides the General pane.
In case it's any help, the old popup blocker's menu item to "configure pop-up blocking" worked correctly.
| Assignee | ||
Comment 2•19 years ago
|
||
The preference window is opened to a specific panel using an identifier (belonging to the bundle). The feed preferences are located in the first pane, which has an identifier of org.mozilla.camino.preference.navigation. The bug was occurring because the openFeedPrefPane: method was using org.mozilla.camino.preference.general as that identifier.
I'm betting the first panel was originally titled 'navigation', but has since been changed to 'general' (in the interface that is - the bundle identifier has always been navigation).
Comment 3•19 years ago
|
||
Comment on attachment 239447 [details] [diff] [review]
BrowserWindowController.mm: Open Feed Preferences Patch
r=me
Attachment #239447 -
Flags: review+
Updated•19 years ago
|
Attachment #239447 -
Flags: superreview?(mikepinkerton)
Updated•19 years ago
|
Assignee: nobody → camino
Comment 4•19 years ago
|
||
Comment on attachment 239447 [details] [diff] [review]
BrowserWindowController.mm: Open Feed Preferences Patch
sr=pink
Attachment #239447 -
Flags: superreview?(mikepinkerton) → superreview+
Comment 5•19 years ago
|
||
Checked into trunk and MOZILLA_1_8_BRANCH.
You need to log in
before you can comment on or make changes to this bug.
Description
•