Fixing bug 352448, |Feed Preferences...| menu item does not activate General prefs pane. Patch by Sean Murphy <camino@seanmurph.com>, r=me, sr=pink. Camino only.